# rjp

./: Cargo.toml  README.md  build.sh  cargo
src/: args.rs  element.rs  input_source.rs  lib.rs  main.rs  select.rs
src/element/: token.rs
src/select/: token.rs
tests/: cli.rs
tests/json_files/select_name/: input.json
tests/json_files/select_name_sku_price/: expected.json
tests/json_files/select_shipTo/: expected.json
