[package]
name = "rjp"
version = "0.2.0"
edition = "2021"
authors = ["Adrian Grzemski <adrian.grzemski@gmail.com>"]
description = "Simple CLI tool for extracting and filtering JSON files"
readme = "README.md"
repository = "https://github.com/grzadr/rjp"
license = "GPL-3.0 license"
keywords = ["json", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
stderrlog = "0.5"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
